@startuml
'https://plantuml.com/class-diagram

title GoldMiner

Screens --> HookAndLine
Screens --> Background
Objects <|-- Gold
Objects <|-- Rock
Objects <|-- Water
Objects <|-- Diamond
Objects <|-- Bag
Screens --> Objects

class Gold {


}

class Rock {

}


class Water {

}

class Diamond {

}

class Bag {

}


class HookAndLine {
-x:int
-y:int
-endX:int
-endY:int
-minLength:int
-maxLength:int
-n:double
-direction:int
-status:int
-judge:boolean
+collisionDete():void
+drawLineAndHook():void
+paint():void
+reStart():void
}

class Objects {
-x: int
-y:int
-length:int
-width:int
-image:Image
-flag:boolean
-weight:int
-score:int
-type:int
+paintself():void
+getwidth():int
+getRec():Rectangle
}

class Screens {
-state:int
+setObjects():void
+paint():void
+setScreen():void
+judgeWhichScreens():void
}

class Background {

-level:int
-targetScore:int
-myScore:int
-numOfWater:int
-waterFlag:boolean
-numOfFire:int
-fireFlag:boolean
-x1:int
-x2:int
-y1:int
-y2:int
-bookStoneFlag:boolean
-DiamondFlag:boolean
-Buying1:boolean
-Buying2:boolean
-Usingwater:boolean
-Usingfire:boolean
-startTime:int
-endTime:int
+paintself():void
+gameTimeEnd():boolean
+reStart():void
+printWordOnGui():void
}

@enduml
